Fix overflow of all buttons (#172)

--- a/docs/static/ds6/skin.css
+++ b/docs/static/ds6/skin.css
@@ -91,6 +91,7 @@ a.cta-btn {
   height: 40px;
   line-height: 40px;
   margin: 0;
+  max-width: 100%;
   padding: 0 16px;
   text-align: center;
   vertical-align: middle;
@@ -291,6 +292,16 @@ a.cta-btn--fluid {
   display: -ms-flexbox;
   display: flex;
   height: 100%;
+  width: 100%;
+}
+.btn__cell > span,
+.fake-btn__cell > span,
+.cta-btn__cell > span,
+.expand-btn__cell > span {
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   width: 100%;
 }
 .btn__cell,
