--- a/src/less/button/ds6/button-base.less
+++ b/src/less/button/ds6/button-base.less
@@ -15,6 +15,7 @@ a.cta-btn {
     height: 40px;
     line-height: 40px;
     margin: 0; // Remove the button margin in Firefox and Safari */
+    max-width: 100%;
     padding: 0 16px;
     text-align: center;
     vertical-align: middle;
@@ -258,6 +259,14 @@ a.cta-btn--fluid {
     display: flex;
     height: 100%;
     width: 100%;
+
+    > span {
+        display: inline-block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100%;
+    }
 }
 
 .btn__cell,
